--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-flask==3.0.3
-gunicorn==22.0.0  # Production WSGI server
-networkx==3.3
-requests==2.32.3
-flask-cors==4.0.0
+flask
+flask-cors
+requests
+gunicorn
